--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "npx tailwindcss -i ./src/assets/index.css -o ./src/assets/main.css --watch"
   },
   "eslintConfig": {
     "extends": ["react-app", "react-app/jest"]
